[package]
name = "ruuvari"
version = "0.1.0"

[[bin]]
name = "ruuvari-rx"
path = "src/main.rs"

[lib]
name = "ruuvari"
path = "lib/lib.rs"

[dependencies]
chrono = { version = "0.4.2", features = [ "serde" ] }
env_logger = "0.5.7"
log = "0.4.1"
rouille = "2.1.0"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.13"
